# boring-window-switcher

./: .travis.yml  ChangeLog.md  README.md  boring-window-switcher.cabal  stack.yaml
app/: Main.hs
author-test/Graphics/UI/: BoringWindowSwitcherSpec.hs
author-test/Graphics/UI/BoringWindowSwitcher/: ControlSpec.hs
author-test/Graphics/UI/BoringWindowSwitcher/Internal/: ControlSpec.hs
src/Graphics/UI/: BoringWindowSwitcher.hs
src/Graphics/UI/BoringWindowSwitcher/: Control.hs  Dialog.hs
src/Graphics/UI/BoringWindowSwitcher/Internal/: Control.hs  Dialog.hs
