name:                   boring-window-switcher
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               A boring window switcher.
description:            A boring window switcher.
category:               Graphics
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
-- homepage:               
-- bug-reports:            

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  -- other-extensions:     
  exposed-modules:      Graphics.UI.BoringWindowSwitcher
  -- other-modules:        
  build-depends:        base

executable boring-window-switcher
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports
  -- other-modules:        
  -- default-extensions:   
  -- other-extensions:     
  build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  -- other-extensions:     
  other-modules:        Graphics.UI.BoringWindowSwitcherSpec
  build-depends:        base, boring-window-switcher,
                        hspec

source-repository head
  type:                 git
--  location:             
